# src/API/Helpers/PaginationRequest.cs
@@ -1,0 +1,21 @@
+namespace API.Helpers;
+
+public class PaginationRequest
+{
+    private const int MaxPageSize = 100;
+
+    private int _pageNumber;
+    public int PageNumber
+    {
+        get => _pageNumber;
+        set => _pageNumber = (value < 1) ? 1 : value;
+    }
+
+    private int _pageSize = 10;
+    public int PageSize
+    {
+        get => _pageSize;
+        set => _pageSize = (value > MaxPageSize) ? MaxPageSize : value;
+    }
+
+}
